--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -11,3 +11,9 @@
   justify-content: space-around;
   color: white;
 }
+
+.characters2 {
+  display: flex;
+  justify-content: space-around;
+  color: white;
+}
